--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.wc.WebCrawler.App</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -28,6 +34,6 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.8.3</version>
-		</dependency>		
+		</dependency>
 	</dependencies>
 </project>
